--- a/index.html
+++ b/index.html
@@ -1,19 +1,6 @@
-{\rtf1\ansi\ansicpg936\cocoartf1404\cocoasubrtf460
-{\fonttbl\f0\fmodern\fcharset0 Courier;\f1\fnil\fcharset134 PingFangSC-Regular;}
-{\colortbl;\red255\green255\blue255;\red47\green47\blue47;\red255\green255\blue255;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww10800\viewh8400\viewkind0
-\deftab720
-\pard\pardeftab720\sl380\partightenfactor0
-
-\f0\fs26 \cf2 \cb3 \expnd0\expndtw0\kerning0
-\outl0\strokewidth0 \strokec2 <!DOCTYPE html>\
-<html>\
-<body>\
-<h1>
-\f1 \'d5\'e2\'ca\'c7\'ce\'d2\'ca\'b9\'d3\'c3
-\f0 github pages
-\f1 \'b4\'ee\'bd\'a8\'b5\'c4\'b8\'f6\'c8\'cb\'d5\'be\'b5\'e3\'a1\'a3
-\f0 </h1>\
-</body>\
-</html>\
-}
+<!DOCTYPE html>
+<html>
+<body>
+<h1>这是我使用github pages搭建的个人站点。</h1>
+</body>
+</html>
