--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<script>
+        window.location.href="http://blog.csdn.net/blogblj";
+</script>
 <body>
 <h1>myblog blj 222</h1>
 </body>
