--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
 <h2 align="center">雁字回时</h2>
 <h2 align="center">月满西楼</h2>
 
-<p align="center">
-<a href="http://blog.sina.com.cn/ylxbblj">白良锦的新浪博客</a> 
-</p>
+
 <p align="center">
   <a href="http://blog.csdn.net/blogblj">白良锦的CSDN博客</a> 
 </p>
+
+<p align="center">
+<a href="http://blog.sina.com.cn/ylxbblj">白良锦的新浪博客</a> 
+</p>
+
+<p align="center">
+  <a href="https://bailiangjin.github.com/blog">Github Blog</a> 
+</p>
+
 </body>
 </html>
