--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 </p>
 
 <p align="center">
+  <a href="https://github.com/bailiangjin">Github</a> 
+</p>
+
+<p align="center">
   <a href="https://bailiangjin.github.com/blog">Github Blog</a> 
 </p>
 
