--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <h2 align="center">雁字回时</h2>
 <h2 align="center">月满西楼</h2>
 
+<p align="center">
+  <a href="http://www.jianshu.com/users/5aafafba4832/latest_articles">简书博客</a> 
+</p>
 
 <p align="center">
   <a href="http://blog.csdn.net/blogblj">白良锦的CSDN博客</a> 
@@ -19,9 +22,6 @@
   <a href="https://github.com/bailiangjin">Github</a> 
 </p>
 
-<p align="center">
-  <a href="https://bailiangjin.github.com/blog">Github Blog</a> 
-</p>
 
 </body>
 </html>
