--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </p>
 
 <p align="center">
-  <a href="http://blog.csdn.net/blogblj">白良锦的CSDN博客</a> 
+  <a href="http://blog.csdn.net/blogblj">CSDN博客</a> 
 </p>
 
 <p align="center">
-<a href="http://blog.sina.com.cn/ylxbblj">白良锦的新浪博客</a> 
+<a href="http://blog.sina.com.cn/ylxbblj">新浪博客</a> 
 </p>
 
 <p align="center">
