完善北邮书签

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </p>
 
 <p align="center">
-<a href="https://github.com/bailiangjin/">北邮书签</a>
+<a href="https://github.com/bailiangjin/bookmarks/bupt.html">北邮书签</a>
 </p>
 
 
