更正北邮书签入口

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </p>
 
 <p align="center">
-<a href="https://github.com/bailiangjin/bookmarks/bupt.html">北邮书签</a>
+<a href="http://bailiangjin.github.com/bookmarks/bupt.html">北邮书签</a>
 </p>
 
 
