--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -8,21 +8,31 @@
   <a href="http://www.bupt.edu.cn/">北邮首页</a>
 </p>
 
-<p align="center">
-  <a href="http://nic.bupt.edu.cn">北邮校园网</a>
-</p>
 
 <p align="center">
-<a href="http://blog.sina.com.cn/ylxbblj">新浪博客</a> 
+<a href="http://lib.bupt.edu.cn">北邮图书馆</a>
 </p>
 
+
 <p align="center">
-  <a href="http://lib.bupt.edu.cn">北邮图书馆</a>
+<a href="http://grs.bupt.edu.cn">北邮研究生院</a>
 </p>
+
+
+<p align="center">
+<a href="http://my.bupt.edu.cn">北邮信息门户</a>
+</p>
+
 
 <p align="center">
 <a href="https://bbs.byr.cn">北邮人论坛</a>
 </p>
+
+
+<p align="center">
+<a href="http://nic.bupt.edu.cn">北邮校园网</a>
+</p>
+
 
 
 </body>
