北邮书签 添加 数据库导航

--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -15,6 +15,11 @@
 
 
 <p align="center">
+<a href="http://lib.bupt.edu.cn/a/shujukudaohang/charStor/all.htm">北邮数据库导航</a>
+</p>
+
+
+<p align="center">
 <a href="http://grs.bupt.edu.cn">北邮研究生院</a>
 </p>
 
