--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1 align="center">白良锦的私家博客</h1>
+<h1 align="center">白良锦的主页</h1>
+
 <h2 align="center">北邮书签</h2>
 
 <p align="center">
