--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1 align="center">白良锦的私家博客</h1>
+<h1 align="center">白良锦的主页</h1>
+
 <h2 align="center">云中谁寄锦书来</h2>
 <h2 align="center">雁字回时</h2>
 <h2 align="center">月满西楼</h2>
