--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -21,6 +21,10 @@
 
 
 <p align="center">
+<a href="http://yjxt.bupt.edu.cn">成绩查询（用户名：学号 初始密码：身份证号全部）</a>
+</p>
+
+<p align="center">
 <a href="http://grs.bupt.edu.cn">北邮研究生院</a>
 </p>
 
