更改 北邮书签

--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -23,7 +23,7 @@
 <p align="center">
 <a href="http://yjxt.bupt.edu.cn">成绩查询</a>
 </p>
-<p align="center">（用户名：学号 初始密码：身份证号全部）</p>
+<p align="center"> <font size="3" face="arial" color="red">（成绩查询登录：用户名：学号 初始密码：身份证号全部）</font></p>
 
 <p align="center">
 <a href="http://grs.bupt.edu.cn">北邮研究生院</a>
