--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1 align="center">白良锦的主页</h1>
+<h1 align="center">北邮书签</h1>
 
-<h2 align="center">北邮书签</h2>
+
 
 <p align="center">
   <a href="http://www.bupt.edu.cn/">北邮首页</a>
@@ -43,6 +43,10 @@
 <p align="center">
 <a href="http://nic.bupt.edu.cn">北邮校园网</a>
 </p>
+
+<p/>
+
+<p align="center"> <font size="1" face="arial" color="black">－－by 白良锦</font></p>
 
 
 
