--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -33,6 +33,11 @@
 <p align="center">
 <a href="http://my.bupt.edu.cn">北邮信息门户</a>
 </p>
+<p align="center"> <font size="1" face="arial" color="red">（信息门户登录 用户名:学号 初始密码:身份证号后六位）</font></p>
+
+<p align="center">
+<a href="http://msca.bupt.edu.cn/Default.aspx">正版软件</a>
+</p>
 
 
 <p align="center">
