--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -49,6 +49,11 @@
 <a href="http://nic.bupt.edu.cn">北邮校园网</a>
 </p>
 
+<p align="center">
+<a href="http://nic.bupt.edu.cn/list/list.php?p=3_24_1">北邮VPN接入服务</a>
+</p>
+
+
 <p/>
 
 <p align="center"> <font size="1" face="arial" color="black">－－by 白良锦</font></p>
