--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -50,7 +50,7 @@
 </p>
 
 <p align="center">
-<a href="http://nic.bupt.edu.cn/list/list.php?p=3_24_1">北邮VPN接入服务</a>
+<a href="http://nic.bupt.edu.cn/list/list.php?p=3_24_1">北邮VPN接入</a>
 </p>
 
 
