--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+    
+    <head>
+        <title>北邮书签<title/>
+            
+    <head/>
 <body>
 <h1 align="center">北邮书签</h1>
 
