--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -24,7 +24,7 @@
 <p align="center">
 <a href="http://yjxt.bupt.edu.cn">成绩查询</a>
 </p>
-<p align="center"> <font size="1" face="arial" color="red">（成绩查询登录 用户名:学号 初始密码:身份证号全部）</font></p>
+<p align="center"> <font size="1" face="arial" color="black">（成绩查询登录 用户名:学号 初始密码:身份证号全部）</font></p>
 
 <p align="center">
 <a href="http://grs.bupt.edu.cn">北邮研究生院</a>
@@ -34,7 +34,7 @@
 <p align="center">
 <a href="http://my.bupt.edu.cn">北邮信息门户</a>
 </p>
-<p align="center"> <font size="1" face="arial" color="red">（信息门户登录 用户名:学号 初始密码:身份证号后六位）</font></p>
+<p align="center"> <font size="1" face="arial" color="black">（信息门户登录 用户名:学号 初始密码:身份证号后六位）</font></p>
 
 <p align="center">
 <a href="http://msca.bupt.edu.cn/Default.aspx">正版软件</a>
