添加开发书签

--- a/bookmarks/dev.html
+++ b/bookmarks/dev.html
@@ -4,10 +4,16 @@
     <body>
 <h1 align="center">开发书签</h1>
 
+<p align="center"> <font size="1" face="arial" color="black">－－by 白良锦</font></p>
+
 
 
 <p align="center">
   <a href="https://github.com/">GitHub</a>
+</p>
+
+<p align="center">
+<a href="http://stackoverflow.com/">stackoverflow</a>
 </p>
 
 
@@ -20,6 +26,9 @@
 <a href="http://json.cn/">Json在线解析</a>
 </p>
 
+<p align="center">
+<a href="http://tool.oschina.net/codeformat/js">在线代码格式化</a>
+</p>
 
 <p align="center">
 <a href="http://www.yesky.com/imagesnew/software/jscript/back16.htm">RGB颜色转换</a>
@@ -34,9 +43,8 @@
 </p>
 
 
-<p/>
 
-<p align="center"> <font size="1" face="arial" color="black">－－by 白良锦</font></p>
+
 
 
 
