--- a/index.html
+++ b/index.html
@@ -7,27 +7,22 @@
 <h2 align="center">雁字回时</h2>
 <h2 align="center">月满西楼</h2>
 
+
 <p align="center">
-  <a href="http://www.jianshu.com/users/5aafafba4832/latest_articles">简书博客</a> 
+<a href="https://github.com/bailiangjin">GitHub</a>
 </p>
 
 <p align="center">
-  <a href="http://blog.csdn.net/blogblj">CSDN博客</a> 
+<a href="http://bailiangjin.github.com/bookmarks/dev.html">开发书签</a>
 </p>
 
 <p align="center">
-<a href="http://blog.sina.com.cn/ylxbblj">新浪博客</a> 
-</p>
-
-<p align="center">
-  <a href="https://github.com/bailiangjin">Github</a> 
+<a href="http://bailiangjin.github.com/bookmarks/blog.html">博客书签</a>
 </p>
 
 <p align="center">
 <a href="http://bailiangjin.github.com/bookmarks/bupt.html">北邮书签</a>
 </p>
-
-
 
 
 </body>
