添加搜索书签

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 </p>
 
 <p align="center">
+<a href="http://bailiangjin.github.com/bookmarks/search.html">搜索书签</a>
+</p>
+
+
+<p align="center">
 <a href="http://bailiangjin.github.com/bookmarks/blog.html">博客书签</a>
 </p>
 
