添加搜索书签项

--- a/bookmarks/search.html
+++ b/bookmarks/search.html
@@ -20,7 +20,19 @@
 </p>
 
 <p align="center">
+<a href="https://www.zhihu.com">知乎</a>
+</p>
+
+<p align="center">
+<a href="https://www.douban.com">豆瓣</a>
+</p>
+
+<p align="center">
 <a href="http://www.cn.bing.com">Bing</a>
+</p>
+
+<p align="center">
+<a href="http://translate.google.cn/">Google 翻译</a>
 </p>
 
 </body>
