添加软件下载链接索引

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 <a href="http://bailiangjin.github.com/bookmarks/bupt.html">北邮书签</a>
 </p>
 
+<p align="center">
+<a href="https://bailiangjin.github.com/dev/download/release/index.html">DIY软件发布下载链接索引</a>
+</p>
+
 
 </body>
 </html>
