更改书签名称

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </p>
 
 <p align="center">
-<a href="https://bailiangjin.github.com/dev/download/release/index.html">DIY软件发布下载链接索引</a>
+<a href="https://bailiangjin.github.com/dev/download/release/index.html">DIY软件下载</a>
 </p>
 
 
