--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -54,6 +54,12 @@
 <a href="http://nic.bupt.edu.cn/list/list.php?p=3_24_1">北邮VPN接入</a>
 </p>
 
+<p align="center">
+<a href="http://www.newsmth.net">水木社区</a>
+</p>
+
+
+
 
 <p/>
 
