--- a/dev/download/release/index.html
+++ b/dev/download/release/index.html
@@ -6,7 +6,7 @@
 
 
 <p align="center">
-<a href="https://bailiangjin.github.com/dev/download/release/SignApkTool_v0.93.jar">Apk签名工具下载</a>
+<a href="https://bailiangjin.github.com/dev/download/release/SignApkTool_v0.93.jar">Apk签名工具下载（支持jdk1.60及更高版本）</a>
 </p>
 
 <p align="center">
