发布页添加 基础资源库 Github链接

--- a/dev/download/release/index.html
+++ b/dev/download/release/index.html
@@ -6,16 +6,23 @@
 
 
 <p align="center">
-<a href="https://bailiangjin.github.com/dev/download/release/SignApkTool_v0.93.jar">Apk签名工具下载（支持jdk1.60+）</a>
+<a href="https://bailiangjin.github.com/dev/download/release/SignApkTool_v0.93.jar">Apk签名工具下载（支持mac、windows jdk1.6及以上）</a>
 </p>
 
 <p align="center">
 <a href="https://github.com/bailiangjin/SignApkTool">Apk签名工具源码GitHub链接</a>
 </p>
 
+
+<p align="center">
+<a href="https://github.com/bailiangjin/BaseLibrary">Android 基础公共资源库 Github源码</a>
+</p>
+
 <p align="center">
 <a href="http://bailiangjin.github.com">回首页</a>
 </p>
+
+
 
 
 
