--- a/bookmarks/search.html
+++ b/bookmarks/search.html
@@ -12,7 +12,7 @@
 </p>
 
 <p align="center">
-<a href="https://www.baidu.com">百度搜索</a>
+<a href="https://www.baidu.com">百度一下</a>
 </p>
 
 <p align="center">
