添加 博客文章导航

--- a/index.html
+++ b/index.html
@@ -198,6 +198,11 @@ sup {
 <a href="http://bailiangjin.github.com/bookmarks/bupt.html">北邮书签</a>
 </p>
 
+<p align="center">
+<a href="https://bailiangjin.github.com/blog/articles/dev_aticles.html">博客文章分享</a>
+</p>
+
+
 
 
 
