添加正则匹配工具书签

--- a/bookmarks/dev.html
+++ b/bookmarks/dev.html
@@ -39,6 +39,14 @@
 </p>
 
 <p align="center">
+<a href="http://tool.oschina.net/regex">在线正则匹配-开源中国</a>
+</p>
+
+<p align="center">
+<a href="http://tool.lu/regex/">在线正则匹配-lu</a>
+</p>
+
+<p align="center">
 <a href="https://git-scm.com/book/zh/v2">Git-Book</a>
 </p>
 
