添加 在线开发工具 书签

--- a/bookmarks/dev/index.html
+++ b/bookmarks/dev/index.html
@@ -27,24 +27,9 @@
 
 
 <p align="center">
-<a href="http://json.cn/">Json在线解析</a>
+<a href="http://bailiangjin.github.com/bookmarks/dev/tools.html">在线开发工具</a>
 </p>
 
-<p align="center">
-<a href="http://tool.oschina.net/codeformat/js">在线代码格式化</a>
-</p>
-
-<p align="center">
-<a href="http://www.yesky.com/imagesnew/software/jscript/back16.htm">RGB颜色转换</a>
-</p>
-
-<p align="center">
-<a href="http://tool.oschina.net/regex">在线正则匹配-开源中国</a>
-</p>
-
-<p align="center">
-<a href="http://tool.lu/regex/">在线正则匹配-lu</a>
-</p>
 
 <p align="center">
 <a href="https://git-scm.com/book/zh/v2">Git-Book</a>
