--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ sup {
 
 
 <p align="center">
-<a href="http://bailiangjin.github.com/bookmarks/dev.html">开发书签</a>
+<a href="http://bailiangjin.github.com/bookmarks/dev/index.html">开发书签</a>
 </p>
 
 
