更改 书签名

--- a/bookmarks/dev/tools.html
+++ b/bookmarks/dev/tools.html
@@ -18,19 +18,19 @@
 </p>
 
 <p align="center">
-<a href="http://tool.oschina.net/codeformat/js">在线代码格式化</a>
+<a href="http://tool.oschina.net/codeformat/js">代码格式化</a>
 </p>
 
 <p align="center">
-<a href="http://www.yesky.com/imagesnew/software/jscript/back16.htm">在线RGB颜色转换</a>
+<a href="http://www.yesky.com/imagesnew/software/jscript/back16.htm">RGB颜色转换</a>
 </p>
 
 <p align="center">
-<a href="http://tool.oschina.net/regex">在线正则匹配-开源中国</a>
+<a href="http://tool.oschina.net/regex">正则匹配-开源中国</a>
 </p>
 
 <p align="center">
-<a href="http://tool.lu/regex/">在线正则匹配-lu</a>
+<a href="http://tool.lu/regex/">正则匹配-lu</a>
 </p>
 
 
