书签 添加回首页 跳转链接

--- a/bookmarks/search.html
+++ b/bookmarks/search.html
@@ -35,5 +35,9 @@
 <a href="http://translate.google.cn/">Google 翻译</a>
 </p>
 
+<p align="center">
+<a href="http://bailiangjin.github.com">回首页</a>
+</p>
+
 </body>
 </html>
