--- a/bookmarks/blog.html
+++ b/bookmarks/blog.html
@@ -22,5 +22,9 @@
 <a href="http://blog.sina.com.cn/ylxbblj">新浪博客</a>
 </p>
 
+<p align="center">
+<a href="http://bailiangjin.github.com">回首页</a>
+</p>
+
 </body>
 </html>
