--- a/bookmarks/dev/tools.html
+++ b/bookmarks/dev/tools.html
@@ -35,18 +35,9 @@
 <a href="http://tool.lu/regex/">正则匹配-lu</a>
 </p>
 
-
-
-
-
-
-
-
-
-
-
-
-
+<p align="center">
+<a href="http://bailiangjin.github.com">回首页</a>
+</p>
 
 
 
