--- a/bookmarks/search.html
+++ b/bookmarks/search.html
@@ -1,43 +1,199 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+<style>
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote {
+    margin: 0;
+    padding: 0;
+}
+body {
+    font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", Arial, sans-serif;
+    font-size: 13px;
+    line-height: 18px;
+    color: #737373;
+    background-color: white;
+    margin: 10px 13px 10px 13px;
+}
+table {
+	margin: 10px 0 15px 0;
+	border-collapse: collapse;
+}
+td,th {	
+	border: 1px solid #ddd;
+	padding: 3px 10px;
+}
+th {
+	padding: 5px 10px;	
+}
+
+a {
+    color: #0069d6;
+}
+a:hover {
+    color: #0050a3;
+    text-decoration: none;
+}
+a img {
+    border: none;
+}
+p {
+    margin-bottom: 9px;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: #404040;
+    line-height: 36px;
+}
+h1 {
+    margin-bottom: 18px;
+    font-size: 30px;
+}
+h2 {
+    font-size: 24px;
+}
+h3 {
+    font-size: 18px;
+}
+h4 {
+    font-size: 16px;
+}
+h5 {
+    font-size: 14px;
+}
+h6 {
+    font-size: 13px;
+}
+hr {
+    margin: 0 0 19px;
+    border: 0;
+    border-bottom: 1px solid #ccc;
+}
+blockquote {
+    padding: 13px 13px 21px 15px;
+    margin-bottom: 18px;
+    font-family:georgia,serif;
+    font-style: italic;
+}
+blockquote:before {
+    content:"\201C";
+    font-size:40px;
+    margin-left:-10px;
+    font-family:georgia,serif;
+    color:#eee;
+}
+blockquote p {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 18px;
+    margin-bottom: 0;
+    font-style: italic;
+}
+code, pre {
+    font-family: Monaco, Andale Mono, Courier New, monospace;
+}
+code {
+    background-color: #fee9cc;
+    color: rgba(0, 0, 0, 0.75);
+    padding: 1px 3px;
+    font-size: 12px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+}
+pre {
+    display: block;
+    padding: 14px;
+    margin: 0 0 18px;
+    line-height: 16px;
+    font-size: 11px;
+    border: 1px solid #d9d9d9;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+pre code {
+    background-color: #fff;
+    color:#737373;
+    font-size: 11px;
+    padding: 0;
+}
+sup {
+    font-size: 0.83em;
+    vertical-align: super;
+    line-height: 0;
+}
+* {
+	-webkit-print-color-adjust: exact;
+}
+@media screen and (min-width: 914px) {
+    body {
+        width: 854px;
+        margin:10px auto;
+    }
+}
+@media print {
+	body,code,pre code,h1,h2,h3,h4,h5,h6 {
+		color: black;
+	}
+	table, pre {
+		page-break-inside: avoid;
+	}
+}
+</style>
+<title>搜索书签合集</title>
+
+</head>
 <body>
-    
-<h1 align="center">白良锦的搜索书签</h1>
+<h2 align="center">搜索书签合集</h2>
 
-<h3 align="center">千军易得 一将难求</h3>
+<h3 align="center">中国区</h3>
 
-<p align="center">
-<a href="https://www.google.com.hk/">Google HK</a>
-</p>
+<p align="center"><a href="https://www.baidu.com">百度一下</a></p>
 
-<p align="center">
-<a href="https://www.baidu.com">百度一下</a>
-</p>
+<p align="center"><a href="https://so.com">360搜索</a></p>
 
-<p align="center">
-<a href="https://so.com">360搜索</a>
-</p>
+<p align="center"><a href="https://sogou.com">搜狗搜索</a></p>
 
-<p align="center">
-<a href="https://www.zhihu.com">知乎</a>
-</p>
+<h3 align="center">逼格</h3>
 
-<p align="center">
-<a href="https://www.douban.com">豆瓣</a>
-</p>
+<p align="center"><a href="https://www.google.com.hk">Google搜索</a></p>
+<p align="center"><a href="http://translate.google.cn">Google翻译</a></p>
 
-<p align="center">
-<a href="http://www.cn.bing.com">Bing</a>
-</p>
+<p align="center"><a href="https://bing.com">必应搜索</a></p>
 
-<p align="center">
-<a href="http://translate.google.cn/">Google 翻译</a>
-</p>
+<p align="center"><a href="https://www.yahoo.com">雅虎搜索</a></p>
 
-<p align="center">
-<a href="http://bailiangjin.github.com">回首页</a>
-</p>
+<h3 align="center">兴趣搜索</h3>
 
+<p align="center"><a href="https://zhihu.com">知乎</a></p>
+
+<p align="center"><a href="https://douban.com">豆瓣</a></p>
+
+<p align="center"><a href="https://movie.douban.com">豆瓣电影</a></p>
+
+<p align="center"><a href="https://book.douban.com">豆瓣读书</a></p>
+
+<p align="center"><a href="https://music.douban.com">豆瓣音乐</a></p>
+
+<h3 align="center">开发</h3>
+
+<p align="center"><a href="https://github.com">Github</a></p>
+
+<p align="center"><a href="https://stackoverflow.com">Stackoverflow</a></p>
+
+<p>
+<p align="center"><a href="https://bailiangjin.github.com">回首页</a></p>
 </body>
 </html>
