美化北邮书签

--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -1,71 +1,197 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    
-    <body>
-<h1 align="center">北邮书签</h1>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+<style>
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote {
+    margin: 0;
+    padding: 0;
+}
+body {
+    font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", Arial, sans-serif;
+    font-size: 13px;
+    line-height: 18px;
+    color: #737373;
+    background-color: white;
+    margin: 10px 13px 10px 13px;
+}
+table {
+	margin: 10px 0 15px 0;
+	border-collapse: collapse;
+}
+td,th {	
+	border: 1px solid #ddd;
+	padding: 3px 10px;
+}
+th {
+	padding: 5px 10px;	
+}
 
+a {
+    color: #0069d6;
+}
+a:hover {
+    color: #0050a3;
+    text-decoration: none;
+}
+a img {
+    border: none;
+}
+p {
+    margin-bottom: 9px;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: #404040;
+    line-height: 36px;
+}
+h1 {
+    margin-bottom: 18px;
+    font-size: 30px;
+}
+h2 {
+    font-size: 24px;
+}
+h3 {
+    font-size: 18px;
+}
+h4 {
+    font-size: 16px;
+}
+h5 {
+    font-size: 14px;
+}
+h6 {
+    font-size: 13px;
+}
+hr {
+    margin: 0 0 19px;
+    border: 0;
+    border-bottom: 1px solid #ccc;
+}
+blockquote {
+    padding: 13px 13px 21px 15px;
+    margin-bottom: 18px;
+    font-family:georgia,serif;
+    font-style: italic;
+}
+blockquote:before {
+    content:"\201C";
+    font-size:40px;
+    margin-left:-10px;
+    font-family:georgia,serif;
+    color:#eee;
+}
+blockquote p {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 18px;
+    margin-bottom: 0;
+    font-style: italic;
+}
+code, pre {
+    font-family: Monaco, Andale Mono, Courier New, monospace;
+}
+code {
+    background-color: #fee9cc;
+    color: rgba(0, 0, 0, 0.75);
+    padding: 1px 3px;
+    font-size: 12px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+}
+pre {
+    display: block;
+    padding: 14px;
+    margin: 0 0 18px;
+    line-height: 16px;
+    font-size: 11px;
+    border: 1px solid #d9d9d9;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+pre code {
+    background-color: #fff;
+    color:#737373;
+    font-size: 11px;
+    padding: 0;
+}
+sup {
+    font-size: 0.83em;
+    vertical-align: super;
+    line-height: 0;
+}
+* {
+	-webkit-print-color-adjust: exact;
+}
+@media screen and (min-width: 914px) {
+    body {
+        width: 854px;
+        margin:10px auto;
+    }
+}
+@media print {
+	body,code,pre code,h1,h2,h3,h4,h5,h6 {
+		color: black;
+	}
+	table, pre {
+		page-break-inside: avoid;
+	}
+}
+</style>
+<title>北邮书签</title>
 
+</head>
+<body>
+<h2 align="center">北邮书签</h2>
+<p>
 
-<p align="center">
-  <a href="http://www.bupt.edu.cn/">北邮首页</a>
-</p>
+<p align="center"><img src="http://www.bupt.edu.cn/upload/image/201410/%E5%8C%97%E9%82%AE%20logo%20%E8%93%9D.png" height="100" width="100" alt="北邮首页" /></p>
 
+<h3 align="center">门户</h3>
 
-<p align="center">
-<a href="http://lib.bupt.edu.cn">北邮图书馆</a>
-</p>
+<p align="center"><a href="http://www.bupt.edu.cn">北邮首页</a></p>
 
+<p align="center"><a href="http://grs.bupt.edu.cn">北邮研究生院</a></p>
 
-<p align="center">
-<a href="http://lib.bupt.edu.cn/a/shujukudaohang/charStor/all.htm">北邮数据库导航</a>
-</p>
+<p align="center"><a href="http://my.bupt.edu.cn">北邮信息门户</a><br/>
+<font size="1" face="arial" >（信息门户登录 用户名:学号 初始密码:身份证号后六位）</font></p>
 
+<h3 align="center">学习</h3>
 
-<p align="center">
-<a href="http://yjxt.bupt.edu.cn">成绩查询</a>
-</p>
-<p align="center"> <font size="1" face="arial" color="black">（成绩查询登录 用户名:学号 初始密码:身份证号全部）</font></p>
+<p align="center"><a href="http://lib.bupt.edu.cn">北邮图书馆</a></p>
 
-<p align="center">
-<a href="http://grs.bupt.edu.cn">北邮研究生院</a>
-</p>
+<p align="center"><a href="http://lib.bupt.edu.cn/a/shujukudaohang/charStor/all.htm">北邮数据库导航</a></p>
 
+<p align="center"><a href="http://yjxt.bupt.edu.cn">成绩查询</a><br/>
+<font size="1" face="arial" >（成绩查询登录 用户名:学号 初始密码:身份证号全部）</font></p>
 
-<p align="center">
-<a href="http://my.bupt.edu.cn">北邮信息门户</a>
-</p>
-<p align="center"> <font size="1" face="arial" color="black">（信息门户登录 用户名:学号 初始密码:身份证号后六位）</font></p>
+<h3 align="center">SNS</h3>
 
-<p align="center">
-<a href="http://msca.bupt.edu.cn/Default.aspx">正版软件</a>
-</p>
+<p align="center"><a href="https://bbs.byr.cn">北邮人论坛</a><br/>
+<a href="http://www.newsmth.net">水木社区</a></p>
 
+<h3 align="center">工具</h3>
 
-<p align="center">
-<a href="https://bbs.byr.cn">北邮人论坛</a>
-</p>
+<p align="center"><a href="http://msca.bupt.edu.cn/Default.aspx">正版软件</a></p>
 
+<p align="center"><a href="http://msca.bupt.edu.cn/Default.aspx">北邮校园网</a></p>
 
-<p align="center">
-<a href="http://nic.bupt.edu.cn">北邮校园网</a>
-</p>
+<p align="center"><a href="http://msca.bupt.edu.cn/Default.aspx">北邮VPN接入</a></p>
 
-<p align="center">
-<a href="http://nic.bupt.edu.cn/list/list.php?p=3_24_1">北邮VPN接入</a>
-</p>
-
-<p align="center">
-<a href="http://www.newsmth.net">水木社区</a>
-</p>
-
-
-
-
-<p/>
-
-<p align="center"> <font size="1" face="arial" color="black">－－by 白良锦</font></p>
-
-
-
+<p align="center">--by 白良锦</p>
 </body>
 </html>
