--- a/bookmarks/dev/index.html
+++ b/bookmarks/dev/index.html
@@ -1,53 +1,180 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+<style>
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote {
+    margin: 0;
+    padding: 0;
+}
+body {
+    font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", Arial, sans-serif;
+    font-size: 13px;
+    line-height: 18px;
+    color: #737373;
+    background-color: white;
+    margin: 10px 13px 10px 13px;
+}
+table {
+	margin: 10px 0 15px 0;
+	border-collapse: collapse;
+}
+td,th {	
+	border: 1px solid #ddd;
+	padding: 3px 10px;
+}
+th {
+	padding: 5px 10px;	
+}
+
+a {
+    color: #0069d6;
+}
+a:hover {
+    color: #0050a3;
+    text-decoration: none;
+}
+a img {
+    border: none;
+}
+p {
+    margin-bottom: 9px;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: #404040;
+    line-height: 36px;
+}
+h1 {
+    margin-bottom: 18px;
+    font-size: 30px;
+}
+h2 {
+    font-size: 24px;
+}
+h3 {
+    font-size: 18px;
+}
+h4 {
+    font-size: 16px;
+}
+h5 {
+    font-size: 14px;
+}
+h6 {
+    font-size: 13px;
+}
+hr {
+    margin: 0 0 19px;
+    border: 0;
+    border-bottom: 1px solid #ccc;
+}
+blockquote {
+    padding: 13px 13px 21px 15px;
+    margin-bottom: 18px;
+    font-family:georgia,serif;
+    font-style: italic;
+}
+blockquote:before {
+    content:"\201C";
+    font-size:40px;
+    margin-left:-10px;
+    font-family:georgia,serif;
+    color:#eee;
+}
+blockquote p {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 18px;
+    margin-bottom: 0;
+    font-style: italic;
+}
+code, pre {
+    font-family: Monaco, Andale Mono, Courier New, monospace;
+}
+code {
+    background-color: #fee9cc;
+    color: rgba(0, 0, 0, 0.75);
+    padding: 1px 3px;
+    font-size: 12px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+}
+pre {
+    display: block;
+    padding: 14px;
+    margin: 0 0 18px;
+    line-height: 16px;
+    font-size: 11px;
+    border: 1px solid #d9d9d9;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+pre code {
+    background-color: #fff;
+    color:#737373;
+    font-size: 11px;
+    padding: 0;
+}
+sup {
+    font-size: 0.83em;
+    vertical-align: super;
+    line-height: 0;
+}
+* {
+	-webkit-print-color-adjust: exact;
+}
+@media screen and (min-width: 914px) {
+    body {
+        width: 854px;
+        margin:10px auto;
+    }
+}
+@media print {
+	body,code,pre code,h1,h2,h3,h4,h5,h6 {
+		color: black;
+	}
+	table, pre {
+		page-break-inside: avoid;
+	}
+}
+</style>
+<title>白良锦的开发书签</title>
+
+</head>
 <body>
-    
-<h1 align="center">白良锦的开发书签</h1>
+<h2 align="center">白良锦的开发书签</h2>
 
 <h3 align="center">千军易得 一将难求</h3>
+<p>
 
+<p align="center"><a href="https://github.com">Github</a></p>
 
-<p align="center">
-  <a href="https://github.com/">GitHub</a>
-</p>
+<p align="center"><a href="http://stackoverflow.com">Stackoverflow</a></p>
 
-<p align="center">
-<a href="http://stackoverflow.com/">stackoverflow</a>
-</p>
+<p align="center"><a href="https://developer.android.com/guide/index.html?hl=zh-cn">Android Api</a></p>
 
-<p align="center">
-<a href="https://developer.android.com/guide/index.html?hl=zh-cn">Android Api</a>
-</p>
+<p align="center"><a href="http://bailiangjin.github.io/bookmarks/dev/tools.html">在线开发工具</a></p>
 
+<p align="center"><a href="http://jikedaohang.com/">极客导航</a></p>
 
-<p align="center">
-<a href="http://jikedaohang.com/">极客导航</a>
-</p>
+<p align="center"><a href="https://git-scm.com/book/zh/v2">Git-Book</a></p>
 
+<p align="center"><a href="http://192.168.199.1/login_web.html">极路由</a></p>
 
-<p align="center">
-<a href="http://bailiangjin.github.com/bookmarks/dev/tools.html">在线开发工具</a>
-</p>
-
-
-<p align="center">
-<a href="https://git-scm.com/book/zh/v2">Git-Book</a>
-</p>
-
-<p align="center">
-<a href="http://192.168.199.1/login_web.html">极路由</a>
-</p>
-
-
-<p align="center">
-<a href="http://bailiangjin.github.com">回首页</a>
-</p>
-
-
-
-
-
-
+<p align="center"><a href="https://bailiangjin.github.com">回首页</a></p>
 </body>
 </html>
