--- a/bookmarks/search.html
+++ b/bookmarks/search.html
@@ -197,7 +197,7 @@ sup {
 
 
 <h3 align="center">友情链接</h3>
-<p align="center"><a href="https://stackoverflow.com">北邮书签</a></p>
+<p align="center"><a href="http://bailiangjin.github.io/bookmarks/bupt.html">北邮书签</a></p>
 
 <p>
 
