添加回首页标签

--- a/bookmarks/dev/tools.html
+++ b/bookmarks/dev/tools.html
@@ -177,5 +177,7 @@ sup {
 <p align="center"><a href="http://tool.lu/regex/">正则匹配-lu</a></p>
 
 <p align="center"><a href="https://github.com">Github</a></p>
+<p>
+<p align="center"><a href="https://bailiangjin.github.com">回首页</a></p>
 </body>
 </html>
