--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -167,6 +167,8 @@ sup {
 
 <p align="center"><a href="http://grs.bupt.edu.cn">北邮研究生院</a></p>
 
+<p align="center"><a href="https://mail.bupt.edu.cn">北邮邮箱</a></p>
+
 <p align="center"><a href="http://my.bupt.edu.cn">北邮信息门户</a><br/>
 <font size="1" face="arial" >（信息门户登录 用户名:学号 初始密码:身份证号后六位）</font></p>
 
