--- a/dev/download/picture/pk.html
+++ b/dev/download/picture/pk.html
@@ -152,7 +152,7 @@ sup {
 	}
 }
 </style>
-<title>[gif](https://raw.githubusercontent.com/bailiangjin/bailiangjin.github.io/master/dev/download/picture/pk.gif</title>
+<title>恬恬的命运是介个样子的</title>
 
 </head>
 <body>
