--- a/dev/download/picture/pk.html
+++ b/dev/download/picture/pk.html
@@ -156,6 +156,6 @@ sup {
 
 </head>
 <body>
-<p><a href="https://raw.githubusercontent.com/bailiangjin/bailiangjin.github.io/master/dev/download/picture/pk.gif">gif</a></p>
+<p><a href="https://raw.githubusercontent.com/bailiangjin/bailiangjin.github.io/master/dev/download/picture/pk.gif">点击查看恬恬的命运</a></p>
 </body>
 </html>
