添加分类名

--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -194,6 +194,8 @@ sup {
 
 <p align="center"><a href="http://msca.bupt.edu.cn/Default.aspx">北邮VPN接入</a></p>
 
+<h3 align="center">友情链接</h3>
+
 <p align="center"><a href="http://bailiangjin.github.io/bookmarks/search.html">常用搜索书签</a></p>
 
 <p align="center">--by 白良锦</p>
