添加技术博客收集

--- a/bookmarks/dev/devblogs.html
+++ b/bookmarks/dev/devblogs.html
@@ -152,31 +152,27 @@ sup {
 	}
 }
 </style>
-<title>白良锦的开发书签</title>
+<title>开发博客集锦</title>
 
 </head>
 <body>
-<h2 align="center">白良锦的开发书签</h2>
-<p>
+<h2 align="center">开发博客集锦</h2>
 
-<h3 align="center">千军易得 一将难求</h3>
-<p>
+<h1></h1>
 
-<p align="center"><a href="https://github.com">Github</a></p>
+<h3 align="center">技术改变生活</h3>
 
-<p align="center"><a href="http://stackoverflow.com">Stackoverflow</a></p>
+<h1></h1>
 
-<p align="center"><a href="https://developer.android.com/guide/index.html?hl=zh-cn">Android Api</a></p>
+<p align="center"><a href="http://club.alibabatech.org/">阿里技术沙龙</a></p>
 
-<p align="center"><a href="http://bailiangjin.github.io/bookmarks/dev/tools.html">在线开发工具</a></p>
+<p align="center"><a href="http://tech.meituan.com/">美团技术博客</a></p>
 
-<p align="center"><a href="http://bailiangjin.github.io/bookmarks/dev/devblogs.html">开发博客集锦</a></p>
+<p align="center"><a href="http://www.ibm.com/developerworks/cn/java/">IBM developerworks</a></p>
 
-<p align="center"><a href="http://jikedaohang.com/">极客导航</a></p>
+<p align="center"><a href="http://www.alloyteam.com/">腾讯 AlloyTeam</a></p>
 
-<p align="center"><a href="https://git-scm.com/book/zh/v2">Git-Book</a></p>
 
-<p align="center"><a href="http://192.168.199.1/login_web.html">极路由</a></p>
 
 <p align="center"><a href="https://bailiangjin.github.com">回首页</a></p>
 </body>
