--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -198,6 +198,8 @@ sup {
 
 <p align="center"><a href="http://bailiangjin.github.io/bookmarks/search.html">常用搜索书签</a></p>
 
+<p align="center"><a href="https://bailiangjin.github.com">回首页</a></p>
+
 <p align="center">--by 白良锦</p>
 </body>
 </html>
