添加看雪论坛

--- a/bookmarks/dev/devblogs.html
+++ b/bookmarks/dev/devblogs.html
@@ -152,11 +152,11 @@ sup {
 	}
 }
 </style>
-<title>开发博客集锦</title>
+<title>开发社区博客集锦</title>
 
 </head>
 <body>
-<h2 align="center">开发博客集锦</h2>
+<h2 align="center">开发社区博客集锦</h2>
 
 <h1></h1>
 
@@ -171,6 +171,9 @@ sup {
 <p align="center"><a href="http://www.ibm.com/developerworks/cn/java/">IBM developerworks</a></p>
 
 <p align="center"><a href="http://www.alloyteam.com/">腾讯 AlloyTeam</a></p>
+
+<p align="center"><a href="http://bbs.pediy.com">看雪论坛</a></p>
+
 
 
 
