--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -153,7 +153,7 @@ sup {
 }
 </style>
 <title>北邮书签</title>
-<link rel="fluid-icon" href="http://www.bupt.edu.cn/upload/image/201410/%E5%8C%97%E9%82%AE%20logo%20%E8%93%9D.png" title="北邮书签">
+<link rel="fluid-icon" href="http://www.bupt.edu.cn/upload/image/201410/%E5%8C%97%E9%82%AE%20logo%20%E8%93%9D.png" title="北邮书签1">
 
 </head>
 <body>
