--- a/bookmarks/blog.html
+++ b/bookmarks/blog.html
@@ -170,6 +170,10 @@ sup {
 
 <p align="center"><a href="http://blog.sina.com.cn/ylxbblj">新浪博客</a></p>
 
+<p align="center"><a href="http://bailiangjin.github.io/bookmarks/dev/devblogs.html">开发博客集锦</a></p>
+
+
+
 <p align="center"><a href="http://bailiangjin.github.com">回首页</a></p>
 </body>
 </html>
