删除清华标签

--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -184,9 +184,7 @@ sup {
 
 <h3 align="center">SNS</h3>
 
-<p align="center"><a href="https://bbs.byr.cn">北邮人论坛</a><br/>
-<a href="http://www.newsmth.net">水木社区</a></p>
-
+<p align="center"><a href="https://bbs.byr.cn">北邮人论坛</a></p>
 <h3 align="center">工具</h3>
 
 <p align="center"><a href="http://msca.bupt.edu.cn/Default.aspx">正版软件</a></p>
