首页添加闲话古诗词 二维码

--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@ sup {
 
 <p align="center"><img src="https://raw.githubusercontent.com/bailiangjin/bailiangjin.github.io/master/dev/download/picture/HeadPortrait.jpeg" alt="头像" width="10%" height="10%"/></p>
 
+
 <p align="center">
 <a href="https://github.com/bailiangjin">GitHub</a>
 </p>
@@ -211,6 +212,10 @@ sup {
 <p align="center">
 <a href="https://bailiangjin.github.com/dev/download/release/index.html">DIY软件下载</a>
 </p>
+<p align="center">“闲话古诗词”微信公众号二维码 我开发的 喜欢的可以扫描关注一下</p>
+
+<p align="center"><img src="https://raw.githubusercontent.com/bailiangjin/bailiangjin.github.io/master/dev/download/picture/xianhuagushici-erweima.jpg
+" alt="头像" width="10%" height="10%"/></p>
 
 
 
