--- a/dev/project/geekweather/index.html
+++ b/dev/project/geekweather/index.html
@@ -152,70 +152,30 @@ sup {
 	}
 }
 </style>
-<title>白良锦的主页</title>
+<title>极客天气</title>
 
 </head>
 <body>
-<h1 align="center">白良锦的主页</h1>
+<h1 align="center">极客天气</h1>
 
-<h3 align="center">云中谁寄锦书来</h3>
+<h3 align="center">简约极致</h3>
 
-<h3 align="center">雁字回时</h3>
+<h3 align="center">GeekStyle</h3>
 
-<h3 align="center">月满西楼</h3>
 
-<h3 align="center">Better 2017</h3>
 
 <p align="center"><img src="https://raw.githubusercontent.com/bailiangjin/bailiangjin.github.io/master/dev/download/picture/HeadPortrait.jpeg" alt="头像" width="10%" height="10%"/></p>
 
 
 <p align="center">
-<a href="https://github.com/bailiangjin">GitHub</a>
+<a href="https://bailiangjin.github.com/dev/download/release/index.html">极客天气下载</a>
 </p>
 
+<p align="center">扫描下方二维码 即可下载极客天气Android版</p>
 
+<p align="center"><img src="http://115.159.99.247:9090/geek_weather_android_erweima.png" alt="头像" width="25%" height="25%"/></p>
+<p align="center">“极简工作室”出品</p>
 
-
-<p align="center">
-<a href="https://bailiangjin.github.com/bookmarks/dev/index.html">开发书签</a>
-</p>
-
-
-
-
-<p align="center">
-<a href="https://bailiangjin.github.com/bookmarks/search.html">搜索书签</a>
-</p>
-
-
-
-
-<p align="center">
-<a href="https://bailiangjin.github.com/bookmarks/blog.html">博客书签</a>
-</p>
-
-
-
-
-<p align="center">
-<a href="https://bailiangjin.github.com/bookmarks/bupt.html">北邮书签</a>
-</p>
-
-<p align="center">
-<a href="https://bailiangjin.github.com/blog/articles/dev_aticles.html">博客文章分享</a>
-</p>
-
-
-
-
-
-<p align="center">
-<a href="https://bailiangjin.github.com/dev/download/release/index.html">DIY软件下载</a>
-</p>
-
-<p align="center"><img src="https://raw.githubusercontent.com/bailiangjin/bailiangjin.github.io/master/dev/download/picture/xianhuagushici-erweima.jpg" alt="头像" width="25%" height="25%"/></p>
-<p align="center">“闲话古诗词”微信公众号二维码</p>
-<p align="center">我开发的 喜欢的可以扫描关注一下</p>
 
 
 
