--- a/bookmarks/blog.html
+++ b/bookmarks/blog.html
@@ -174,6 +174,6 @@ sup {
 
 
 
-<p align="center"><a href="http://bailiangjin.github.com">回首页</a></p>
+<p align="center"><a href="https://bailiangjin.github.com">回首页</a></p>
 </body>
 </html>
