--- a/dev/download/release/index.html
+++ b/dev/download/release/index.html
@@ -184,7 +184,7 @@
 
 
 <p align="center">
-<a href="http://bailiangjin.github.com">回首页</a>
+<a href="https://bailiangjin.github.com">回首页</a>
 </p>
 
 
