更改页面描述

--- a/dev/project/geekweather/index.html
+++ b/dev/project/geekweather/index.html
@@ -167,17 +167,17 @@ sup {
 <p align="center"><img src="https://raw.githubusercontent.com/bailiangjin/bailiangjin.github.io/master/dev/download/picture/HeadPortrait.jpeg" alt="头像" width="10%" height="10%"/></p>
 
 
+<p align="center">扫描下方二维码 下载极客天气Android版</p>
+
+<p align="center"><img src="http://115.159.99.247:9090/geekweather/geek_weather_android_erweima.png" alt="头像" width="25%" height="25%"/></p>
+
+
 <p align="center">
-<a href="https://bailiangjin.github.com/dev/download/release/index.html">极客天气下载</a>
+    <a href="http://115.159.99.247:9090/geekweather/GeekWeather-latest-release.apk">点击下载极客天气Apk文件</a>
 </p>
 
-<p align="center">扫描下方二维码 即可下载极客天气Android版</p>
 
-<p align="center"><img src="http://115.159.99.247:9090/geek_weather_android_erweima.png" alt="头像" width="25%" height="25%"/></p>
 <p align="center">“极简工作室”出品</p>
-
-
-
 
 
 </body>
