添加极客天气 下载二维码

--- a/dev/project/geekweather/index.html
+++ b/dev/project/geekweather/index.html
@@ -173,7 +173,7 @@ sup {
 
 
 <p align="center">
-    <a href="http://115.159.99.247:9090/geekweather/GeekWeather-latest-release.apk">点击下载极客天气Apk文件</a>
+    <a href="http://a.app.qq.com/o/simple.jsp?pkgname=com.bailiangjin.geekweather">点击下载极客天气Apk文件</a>
 </p>
 
 
