添加下载包

--- a/dev/project/geekweather/index.html
+++ b/dev/project/geekweather/index.html
@@ -169,7 +169,7 @@ sup {
 
 <p align="center">扫描下方二维码 下载极客天气Android版</p>
 
-<p align="center"><img src="http://115.159.99.247:9090/geekweather/geek_weather_android_erweima.png" alt="头像" width="25%" height="25%"/></p>
+<p align="center"><img src="https://raw.githubusercontent.com/bailiangjin/bailiangjin.github.io/master/dev/project/geekweather/geek_weather_android_erweima.png" alt="头像" width="25%" height="25%"/></p>
 
 
 <p align="center">
