添加github 下载链接

--- a/dev/project/geekweather/index.html
+++ b/dev/project/geekweather/index.html
@@ -173,7 +173,7 @@ sup {
 
 
 <p align="center">
-    <a href="http://a.app.qq.com/o/simple.jsp?pkgname=com.bailiangjin.geekweather">点击下载极客天气Apk文件</a>
+    <a href="https://raw.githubusercontent.com/bailiangjin/bailiangjin.github.io/master/dev/project/geekweather/GeekWeather-latest-release.apk">点击下载极客天气Apk文件</a>
 </p>
 
 
