--- a/bookmarks/dev/devblogs.html
+++ b/bookmarks/dev/devblogs.html
@@ -164,6 +164,8 @@ sup {
 
 <h1></h1>
 
+<p align="center"><a href="http://www.infoq.com/cn">Info</a></p>
+
 <p align="center"><a href="http://club.alibabatech.org/">阿里技术沙龙</a></p>
 
 <p align="center"><a href="http://tech.meituan.com/">美团技术博客</a></p>
