更改书签名

--- a/bookmarks/dev/devblogs.html
+++ b/bookmarks/dev/devblogs.html
@@ -164,7 +164,7 @@ sup {
 
 <h1></h1>
 
-<p align="center"><a href="http://www.infoq.com/cn">Info</a></p>
+<p align="center"><a href="http://www.infoq.com/cn">InfoQ</a></p>
 
 <p align="center"><a href="http://club.alibabatech.org/">阿里技术沙龙</a></p>
 
