--- a/dev/download/release/index.html
+++ b/dev/download/release/index.html
@@ -152,12 +152,12 @@
                     }
                 }
                 </style>
-                <title>白良锦的主页</title>
+                <title>大白的主页</title>
                 
     </head>
 
 <body>
-<h1 align="center">白良锦的DIY软件</h1>
+<h1 align="center">大白的DIY软件</h1>
 
 <p align="center"><img src="https://raw.githubusercontent.com/bailiangjin/bailiangjin.github.io/master/dev/download/picture/HeadPortrait.jpeg" alt="头像" width="10%" height="10%"/></p>
 
