--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -199,6 +199,6 @@ sup {
 
 <p align="center"><a href="https://bailiangjin.github.com">回首页</a></p>
 
-<p align="center">--by 白良锦</p>
+<p align="center">--by 大白</p>
 </body>
 </html>
