--- a/bookmarks/dev/index.html
+++ b/bookmarks/dev/index.html
@@ -152,11 +152,11 @@ sup {
 	}
 }
 </style>
-<title>白良锦的开发书签</title>
+<title>大白的开发书签</title>
 
 </head>
 <body>
-<h2 align="center">白良锦的开发书签</h2>
+<h2 align="center">大白的开发书签</h2>
 <p>
 
 <h3 align="center">千军易得 一将难求</h3>
