--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@ sup {
 	}
 }
 </style>
-<title>白良锦的主页</title>
+<title>大白的主页</title>
 
 </head>
 <body>
-<h1 align="center">白良锦的主页</h1>
+<h1 align="center">大白的主页</h1>
 
 <h3 align="center">云中谁寄锦书来</h3>
 
