--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <link rel = "Shortcut Icon" href=http://bailiangjin.github.io/icons/bupt_favicon.ico>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 <style>
