--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -186,13 +186,16 @@ sup {
 <h3 align="center">SNS</h3>
 
 <p align="center"><a href="https://bbs.byr.cn">北邮人论坛</a></p>
-<h3 align="center">工具</h3>
 
-<p align="center"><a href="http://msca.bupt.edu.cn/Default.aspx">正版软件</a></p>
 
-<p align="center"><a href="http://msca.bupt.edu.cn/Default.aspx">北邮校园网</a></p>
+<h3 align="center">北邮VPN</h3>
 
-<p align="center"><a href="http://msca.bupt.edu.cn/Default.aspx">北邮VPN接入</a></p>
+<p align="center"><a href="https://vpn.bupt.edu.cn/global-protect/getsoftwarepage.esp">北邮VPN软件下载</a></p>
+<p align="center">北邮VPN服务端地址:</p>
+<p align="center">学校门户：vpn.bupt.edu.cn</p>
+<p align="center">图书馆：libvpn.bupt.edu.cnn</p>
+
+<p align="center"> <font size="1" face="arial" >（vpn登录 用户名:学号 初始密码:身份证号后六位）</font></p>
 
 <h3 align="center">友情链接</h3>
 
