--- a/index.html
+++ b/index.html
@@ -218,6 +218,11 @@ sup {
 <a href="http://bailiangjin.github.io/dev/project/geekweather/index.html">极客天气App下载</a>
 </p>
 
+
+<p align="center">
+    <a href="http://xianhuagushici.com">闲话古诗词</a>
+</p>
+
 <p align="center"><img src="https://raw.githubusercontent.com/bailiangjin/bailiangjin.github.io/master/dev/download/picture/xianhuagushici-erweima.jpg" alt="头像" width="25%" height="25%"/></p>
 <p align="center">“闲话古诗词”微信公众号二维码</p>
 <p align="center">我开发的 喜欢的可以扫描关注一下</p>
