更改链接路径为相对路径

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ sup {
 
 
 <p align="center">
-<a href="https://bailiangjin.github.com/bookmarks/dev/index.html">开发书签</a>
+<a href="dev/index.html">开发书签</a>
 </p>
 
 
