更改链接路径为相对路径3

--- a/index.html
+++ b/index.html
@@ -178,21 +178,21 @@ sup {
 
 
 <p align="center">
-<a href="/dev/index.html">开发书签</a>
+<a href="bookmarks/dev/index.html">开发书签</a>
 </p>
 
 
 
 
 <p align="center">
-<a href="https://bailiangjin.github.com/bookmarks/search.html">搜索书签</a>
+<a href="bookmarks/search.html">搜索书签</a>
 </p>
 
 
 
 
 <p align="center">
-<a href="https://bailiangjin.github.com/bookmarks/blog.html">博客书签</a>
+<a href="bookmarks/blog.html">博客书签</a>
 </p>
 
 
