更改链接路径为相对路径4

--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@ sup {
 
 
 <p align="center">
-<a href="https://bailiangjin.github.com/bookmarks/bupt.html">北邮书签</a>
+<a href="bookmarks/bupt.html">北邮书签</a>
 </p>
 
 <p align="center">
-<a href="https://bailiangjin.github.com/blog/articles/dev_aticles.html">博客文章分享</a>
+<a href="blog/articles/dev_aticles.html">博客文章分享</a>
 </p>
 
 
@@ -211,11 +211,11 @@ sup {
 
 
 <p align="center">
-<a href="https://bailiangjin.github.com/dev/download/release/index.html">DIY软件下载</a>
+<a href="dev/download/release/index.html">DIY软件下载</a>
 </p>
 
 <p align="center">
-<a href="http://bailiangjin.github.io/dev/project/geekweather/index.html">极客天气App下载</a>
+<a href="dev/project/geekweather/index.html">极客天气App下载</a>
 </p>
 
 
