更改链接路径为相对路径5

--- a/bookmarks/dev/index.html
+++ b/bookmarks/dev/index.html
@@ -168,9 +168,9 @@ sup {
 
 <p align="center"><a href="https://developer.android.com/guide/index.html?hl=zh-cn">Android Api</a></p>
 
-<p align="center"><a href="http://bailiangjin.github.io/bookmarks/dev/tools.html">在线开发工具</a></p>
+<p align="center"><a href="tools.html">在线开发工具</a></p>
 
-<p align="center"><a href="http://bailiangjin.github.io/bookmarks/dev/devblogs.html">开发博客集锦</a></p>
+<p align="center"><a href="devblogs.html">开发博客集锦</a></p>
 
 <p align="center"><a href="http://jikedaohang.com/">极客导航</a></p>
 
@@ -178,6 +178,6 @@ sup {
 
 <p align="center"><a href="http://192.168.199.1/login_web.html">极路由</a></p>
 
-<p align="center"><a href="https://bailiangjin.github.com">回首页</a></p>
+<p align="center"><a href="../../">回首页</a></p>
 </body>
 </html>
