更改链接路径为相对路径6

--- a/bookmarks/dev/tools.html
+++ b/bookmarks/dev/tools.html
@@ -178,6 +178,6 @@ sup {
 
 <p align="center"><a href="https://github.com">Github</a></p>
 <p>
-<p align="center"><a href="https://bailiangjin.github.com">回首页</a></p>
+<p align="center"><a href="../../">回首页</a></p>
 </body>
 </html>
