--- a/bookmarks/search.html
+++ b/bookmarks/search.html
@@ -197,10 +197,10 @@ sup {
 
 
 <h3 align="center">友情链接</h3>
-<p align="center"><a href="http://bailiangjin.github.io/bookmarks/bupt.html">北邮书签</a></p>
+<p align="center"><a href="../../bookmarks/bupt.html">北邮书签</a></p>
 
 <p>
 
-<p align="center"><a href="https://bailiangjin.github.com">回首页</a></p>
+<p align="center"><a href="../../">回首页</a></p>
 </body>
 </html>
