--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -199,9 +199,9 @@ sup {
 
 <h3 align="center">友情链接</h3>
 
-<p align="center"><a href="http://bailiangjin.github.io/bookmarks/search.html">常用搜索书签</a></p>
+<p align="center"><a href="search.html">常用搜索书签</a></p>
 
-<p align="center"><a href="https://bailiangjin.github.com">回首页</a></p>
+<p align="center"><a href="../../">回首页</a></p>
 
 <p align="center">--by 大白</p>
 </body>
