--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -193,7 +193,7 @@ sup {
 <p align="center"><a href="https://vpn.bupt.edu.cn/global-protect/getsoftwarepage.esp">北邮VPN软件下载</a></p>
 <p align="center">北邮VPN服务端地址:</p>
 <p align="center">学校门户：vpn.bupt.edu.cn</p>
-<p align="center">图书馆：libvpn.bupt.edu.cnn</p>
+<p align="center">图书馆：libvpn.bupt.edu.cn</p>
 
 <p align="center"> <font size="1" face="arial" >（vpn登录 用户名:学号 初始密码:身份证号后六位）</font></p>
 
