添加vpn 连接异常解决方式说明

--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -194,8 +194,14 @@ sup {
 <p align="center">北邮VPN服务端地址:</p>
 <p align="center">学校门户：vpn.bupt.edu.cn</p>
 <p align="center">图书馆：libvpn.bupt.edu.cn</p>
-
 <p align="center"> <font size="1" face="arial" >（vpn登录 用户名:学号 初始密码:身份证号后六位）</font></p>
+
+<br/>
+<p align="center">问题：mac VPN客户端连接无反应。</p>
+<p align="center">原因：macOS系统第一次安装GlobalProtect会阻止客户端vpn的连接。</p>
+<p align="center">解决方式：在“安全性与隐私”模块点击允许即可。</p>
+<br/><br/>
+
 
 <h3 align="center">友情链接</h3>
 
