添加github常用链接2

--- a/bookmarks/dev/index.html
+++ b/bookmarks/dev/index.html
@@ -191,7 +191,7 @@
 
 <p align="center"><a href="https://github.com">Github</a></p>
 
-<p align="center"><a href="/github/index.html">常用Github库</a></p>
+<p align="center"><a href="github/index.html">常用Github库</a></p>
 
 <p align="center"><a href="http://stackoverflow.com">Stackoverflow</a></p>
 
