replace bupt logo to local resuources

--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -154,14 +154,13 @@ sup {
 }
 </style>
 <title>北邮书签</title>
-<link rel="fluid-icon" href="http://www.bupt.edu.cn/upload/image/201410/%E5%8C%97%E9%82%AE%20logo%20%E8%93%9D.png" title="北邮书签1">
+<link rel="fluid-icon" href="../icons/ic_bupt_logo.png" title="北邮书签">
 
 </head>
 <body>
 <h2 align="center">北邮书签</h2>
 <p>
-
-<p align="center"><img src="http://www.bupt.edu.cn/upload/image/201410/%E5%8C%97%E9%82%AE%20logo%20%E8%93%9D.png" height="100" width="100" alt="北邮首页" /></p>
+<p align="center"><img src="../icons/ic_bupt_logo.png" height="15%" width="15%" alt="北邮首页" /></p>
 
 <h3 align="center">门户</h3>
 
