--- a/index.html
+++ b/index.html
@@ -166,9 +166,7 @@ sup {
 <h3 align="center">月满西楼</h3>
 
 <h3 align="center">Better 2018</h3>
-
-<p align="center"><img src="https://raw.githubusercontent.com/bailiangjin/bailiangjin.github.io/master/dev/download/picture/HeadPortrait.jpeg" alt="头像" width="10%" height="10%"/></p>
-
+<p align="center"><img src="icons/ic_head_portrait.jpeg" alt="头像" width="10%" height="10%"/></p>
 
 <p align="center">
 <a href="https://github.com/bailiangjin">GitHub</a>
@@ -222,8 +220,7 @@ sup {
 <p align="center">
     <a href="http://xianhuagushici.com">闲话古诗词</a>
 </p>
-
-<p align="center"><img src="https://raw.githubusercontent.com/bailiangjin/bailiangjin.github.io/master/dev/download/picture/xianhuagushici-erweima.jpg" alt="头像" width="25%" height="25%"/></p>
+<p align="center"><img src="icons/ic_xianhuagushici_erweima.jpeg" alt="闲话古诗词二维码" width="25%" height="25%"/></p>
 <p align="center">“闲话古诗词”微信公众号二维码</p>
 <p align="center">我开发的 喜欢的可以扫描关注一下</p>
 
