--- a/index.html
+++ b/index.html
@@ -165,36 +165,24 @@ sup {
 
 <h3 align="center">月满西楼</h3>
 
-<h3 align="center">Better 2018</h3>
+<h3 align="center">Enterprise 2021</h3>
 <p align="center"><img src="icons/ic_head_portrait.jpeg" alt="头像" width="10%" height="10%"/></p>
 
 <p align="center">
 <a href="https://github.com/bailiangjin">GitHub</a>
 </p>
 
-
-
-
 <p align="center">
 <a href="bookmarks/dev/index.html">开发书签</a>
 </p>
-
-
-
 
 <p align="center">
 <a href="bookmarks/search.html">搜索书签</a>
 </p>
 
-
-
-
 <p align="center">
 <a href="bookmarks/blog.html">博客书签</a>
 </p>
-
-
-
 
 <p align="center">
 <a href="bookmarks/bupt.html">北邮书签</a>
@@ -204,10 +192,6 @@ sup {
 <a href="blog/articles/dev_aticles.html">博客文章分享</a>
 </p>
 
-
-
-
-
 <p align="center">
 <a href="dev/download/release/index.html">DIY软件下载</a>
 </p>
@@ -216,16 +200,11 @@ sup {
 <a href="dev/project/geekweather/index.html">极客天气App下载</a>
 </p>
 
-
 <p align="center">
     <a href="http://xianhuagushici.com">闲话古诗词</a>
 </p>
 <p align="center"><img src="icons/ic_xianhuagushici_erweima.jpeg" alt="闲话古诗词二维码" width="25%" height="25%"/></p>
 <p align="center">“闲话古诗词”微信公众号二维码</p>
 <p align="center">我开发的 喜欢的可以扫描关注一下</p>
-
-
-
-
 </body>
 </html>
