--- a/index.html
+++ b/index.html
@@ -159,11 +159,12 @@ sup {
 <body>
 <h1 align="center">大白的主页</h1>
 
-<h3 align="center">云中谁寄锦书来</h3>
+<!--春未老，风细柳斜斜。试上超然台上看，半壕春水一城花。烟雨暗千家。-->
+<!--寒食后，酒醒却咨嗟。休对故人思故国，且将新火试新茶。诗酒趁年华。-->
 
-<h3 align="center">雁字回时</h3>
+<h3 align="center">春未老，风细柳斜斜。</h3>
 
-<h3 align="center">月满西楼</h3>
+<h3 align="center">试上超然台上看，半壕春水一城花。烟雨暗千家。</h3>
 
 <h3 align="center">Enterprise 2021</h3>
 <p align="center"><img src="icons/ic_head_portrait.jpeg" alt="头像" width="10%" height="10%"/></p>
