--- a/bookmarks/cloud_service.html
+++ b/bookmarks/cloud_service.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html>
 <head>
-    <link rel="Shortcut Icon" href=http://bailiangjin.github.io/favicon.ico>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <style>
@@ -180,57 +179,50 @@
             }
         }
     </style>
-    <title>大白的主页</title>
+    <title>云服务合集</title>
 
 </head>
 <body>
-<h1 align="center">大白的主页</h1>
+<h2 align="center">云服务合集</h2>
 
-<!--春未老，风细柳斜斜。试上超然台上看，半壕春水一城花。烟雨暗千家。-->
-<!--寒食后，酒醒却咨嗟。休对故人思故国，且将新火试新茶。诗酒趁年华。-->
+<p>
 
-<h3 align="center">春未老，风细柳斜斜。</h3>
+<h3 align="center">Jenkins</h3>
 
-<h3 align="center">试上超然台上看，半壕春水一城花。烟雨暗千家。</h3>
+<p align="center"><a href="http://114.116.12.71:8080" target="_blank">Jenkins-1271</a></p>
+<p align="center"><a href="http://114.116.4.231:8080" target="_blank">Jenkins-4231</a></p>
+<p align="center"><a href="http://114.116.14.31:8080" target="_blank">Jenkins-1431</a></p>
+<p align="center"><a href="http://42.192.50.6:8080/" target="_blank">Jenkins-Tencent</a></p>
+<p align="center"><a href="http://bytedance.asuscomm.com:8090/" target="_blank">Jenkins-PI_3BP</a></p>
 
-<h3 align="center">Enterprise 2021</h3>
-<p align="center"><img src="icons/ic_head_portrait.jpeg" alt="头像" width="10%" height="10%"/></p>
 
-<p align="center"><a href="https://github.com/bailiangjin" target="_blank">GitHub</a></p>
+<h3 align="center">云服务器</h3>
 
-<p align="center"><a href="bookmarks/dev/cloud_service.html" target="_blank">云服务</a></p>
+<p align="center"><a href="https://www.aliyun.com/" target="_blank">阿里云</a></p>
+<p align="center"><a href="https://home.console.aliyun.com/" target="_blank">阿里云-控制台</a></p>
+<p align="center"><a href="https://netcn.console.aliyun.com/core/host/list2" target="_blank">阿里云-云虚拟主机</a></p>
+<br/>
 
-<p align="center"><a href="bookmarks/dev/index.html" target="_blank">开发书签</a></p>
+<p align="center"><a href="https://cloud.tencent.com/" target="_blank">腾讯云</a></p>
+<p align="center"><a href="https://console.cloud.tencent.com/" target="_blank">腾讯云-控制台</a></p>
+<br/>
 
-<p align="center">
-    <a href="bookmarks/search.html" target="_blank">搜索书签</a>
-</p>
+<p align="center"><a href="https://www.huaweicloud.com/" target="_blank">华为云</a></p>
+<p align="center"><a href="https://console.huaweicloud.com/console/" target="_blank">华为云-控制台</a></p>
+<br/>
 
-<p align="center">
-    <a href="bookmarks/blog.html" target="_blank">博客书签</a>
-</p>
+<h3 align="center">开发</h3>
 
-<p align="center">
-    <a href="bookmarks/bupt.html" target="_blank">北邮书签</a>
-</p>
+<p align="center"><a href="https://github.com">Github</a></p>
 
-<p align="center">
-    <a href="blog/articles/dev_aticles.html" target="_blank">博客文章分享</a>
-</p>
+<p align="center"><a href="https://stackoverflow.com">Stackoverflow</a></p>
 
-<p align="center">
-    <a href="dev/download/release/index.html" target="_blank">DIY软件下载</a>
-</p>
+<br/>
+<h3 align="center">友情链接</h3>
+<p align="center"><a href="../../bookmarks/bupt.html">北邮书签</a></p>
 
-<p align="center">
-    <a href="dev/project/geekweather/index.html" target="_blank">极客天气App下载</a>
-</p>
+<p>
 
-<p align="center">
-    <a href="http://xianhuagushici.com" target="_blank">闲话古诗词</a>
-</p>
-<p align="center"><img src="icons/ic_xianhuagushici_erweima.jpeg" alt="闲话古诗词二维码" width="25%" height="25%"/></p>
-<p align="center">“闲话古诗词”微信公众号二维码</p>
-<p align="center">我开发的 喜欢的可以扫描关注一下</p>
+<p align="center"><a href="../../">回首页</a></p>
 </body>
 </html>
