add cloud_service.html 2

--- a/bookmarks/cloud_service.html
+++ b/bookmarks/cloud_service.html
@@ -219,10 +219,10 @@
 
 <br/>
 <h3 align="center">友情链接</h3>
-<p align="center"><a href="../../bookmarks/bupt.html">北邮书签</a></p>
+<p align="center"><a href="bupt.html">北邮书签</a></p>
 
 <p>
 
-<p align="center"><a href="../../">回首页</a></p>
+<p align="center"><a href="../..">回首页</a></p>
 </body>
 </html>
