--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 <p align="center"><a href="https://github.com/bailiangjin" target="_blank">GitHub</a></p>
 
-<p align="center"><a href="bookmarks/dev/cloud_service.html" target="_blank">云服务</a></p>
+<p align="center"><a href="bookmarks/cloud_service.html" target="_blank">云服务</a></p>
 
 <p align="center"><a href="bookmarks/dev/index.html" target="_blank">开发书签</a></p>
 
