--- a/bookmarks/cloud_service.html
+++ b/bookmarks/cloud_service.html
@@ -186,6 +186,9 @@
 <h2 align="center">云服务合集</h2>
 
 <br/>
+<p align="center"><a href="http://123.249.34.252:80/" target="_blank">闲话古诗词_Huawei</a></p>
+
+<br/>
 <h3 align="center">Jenkins</h3>
 <p align="center"><a href="http://114.116.12.71:8080" target="_blank">Jenkins-1271</a></p>
 <p align="center"><a href="http://114.116.4.231:8080" target="_blank">Jenkins-4231</a></p>
