--- a/bookmarks/cloud_service.html
+++ b/bookmarks/cloud_service.html
@@ -195,6 +195,7 @@
 <p align="center"><a href="http://114.116.14.31:8080" target="_blank">Jenkins-1431</a></p>
 <p align="center"><a href="http://42.192.50.6:8080/" target="_blank">Jenkins-Tencent</a></p>
 <p align="center"><a href="http://bytedance.asuscomm.com:8090/" target="_blank">Jenkins-PI_3BP</a></p>
+<p align="center"><a href="http://123.249.34.252:8102/" target="_blank">Jenkins-PI_3BP_HuaWei</a></p>
 
 <br/>
 <h3 align="center">云服务器</h3>
