--- a/bookmarks/cloud_service.html
+++ b/bookmarks/cloud_service.html
@@ -186,6 +186,9 @@
 <h2 align="center">云服务合集</h2>
 
 <br/>
+<p align="center"><a href="https://chat.openai.com/chat" target="_blank">ChatGPT</a></p>
+
+<br/>
 <p align="center"><a href="http://114.116.4.231:80/" target="_blank">闲话古诗词_Huawei</a></p>
 
 <br/>
