--- a/bookmarks/cloud_service.html
+++ b/bookmarks/cloud_service.html
@@ -200,6 +200,10 @@
 <p align="center"><a href="http://bytedance.asuscomm.com:8090/" target="_blank">Jenkins-PI_3BP</a></p>
 <p align="center"><a href="http://123.249.34.252:8102/" target="_blank">Jenkins-PI_3BP_HuaWei</a></p>
 
+<h3 align="center">Test</h3>
+<p align="center"><a href="https://114.116.12.71" target="_blank">Test-Main</a></p>
+<p align="center"><a href="https://114.116.12.71/position" target="_blank">Test-Position</a></p>
+
 <br/>
 <h3 align="center">云服务器</h3>
 <p align="center"><a href="https://www.aliyun.com/" target="_blank">阿里云</a></p>
