update  cloud_service.html

--- a/bookmarks/cloud_service.html
+++ b/bookmarks/cloud_service.html
@@ -189,20 +189,25 @@
 <p align="center"><a href="https://chat.openai.com/chat" target="_blank">ChatGPT</a></p>
 
 <br/>
-<p align="center"><a href="http://114.116.4.231:80/" target="_blank">闲话古诗词_Huawei</a></p>
-
-<br/>
 <h3 align="center">Jenkins</h3>
 <p align="center"><a href="http://114.116.12.71:8080" target="_blank">Jenkins-1271</a></p>
-<p align="center"><a href="http://114.116.4.231:8080" target="_blank">Jenkins-4231</a></p>
 <p align="center"><a href="http://114.116.14.31:8080" target="_blank">Jenkins-1431</a></p>
-<p align="center"><a href="http://123.249.34.252:8080/" target="_blank">Jenkins-Tencent</a></p>
-<p align="center"><a href="http://bytedance.asuscomm.com:8090/" target="_blank">Jenkins-PI_3BP</a></p>
+<p align="center"><a href="http://baymax.imwork.net/" target="_blank">Jenkins-PI_3BP</a></p>
 <p align="center"><a href="http://123.249.34.252:8102/" target="_blank">Jenkins-PI_3BP_HuaWei</a></p>
 
-<h3 align="center">Test</h3>
-<p align="center"><a href="https://114.116.12.71" target="_blank">Test-Main</a></p>
-<p align="center"><a href="https://114.116.12.71/position" target="_blank">Test-Position</a></p>
+<br/>
+<h3 align="center">NetWork</h3>
+<p align="center"><a href="http://123.249.34.252:8080/" target="_blank">NPS</a></p>
+
+<br/>
+<h3 align="center">Local</h3>
+<p align="center"><a href="https://bytedance.asuscomm.com:8443/" target="_blank">ASUS</a></p>
+<p align="center"><a href="http://bytedance.asuscomm.com:8123/" target="_blank">HA</a></p>
+<p align="center"><a href="http://bytedance.asuscomm.com:8040/" target="_blank">NAS</a></p>
+
+
+<h3 align="center">Position</h3>
+<p align="center"><a href="https://114.116.12.71" target="_blank">Position</a></p>
 
 <br/>
 <h3 align="center">云服务器</h3>
