--- a/bookmarks/dev/server/jenkins.html
+++ b/bookmarks/dev/server/jenkins.html
@@ -179,58 +179,17 @@
             }
         }
     </style>
-    <title>云服务合集</title>
+    <title>Jenkins</title>
 
 </head>
 <body>
-<h2 align="center">云服务合集</h2>
+<h1 align="center">Jenkins</h1>
 
-<br/>
-<p align="center"><a href="https://chat.openai.com/chat" target="_blank">ChatGPT</a></p>
-
-<br/>
-<h3 align="center">服务管理</h3>
-<p align="center"><a href="server/jenkins.html">Jenkins</a></p>
-<p align="center"><a href="server/portainer.html">Portainer</a></p>
-
-<br/>
-<h3 align="center">NetWork</h3>
-<p align="center"><a href="http://123.249.34.252:8080/" target="_blank">NPS</a></p>
-
-<br/>
-<h3 align="center">Local</h3>
-<p align="center"><a href="https://bytedance.asuscomm.com:8443/" target="_blank">ASUS</a></p>
-<p align="center"><a href="http://bytedance.asuscomm.com:8123/" target="_blank">HA</a></p>
-<p align="center"><a href="http://bytedance.asuscomm.com:8040/" target="_blank">NAS</a></p>
-
-
-<h3 align="center">Position</h3>
-<p align="center"><a href="https://114.116.12.71" target="_blank">Position</a></p>
-
-<br/>
-<h3 align="center">云服务器</h3>
-<p align="center"><a href="https://www.aliyun.com/" target="_blank">阿里云</a></p>
-<p align="center"><a href="https://home.console.aliyun.com/" target="_blank">阿里云-控制台</a></p>
-<p align="center"><a href="https://netcn.console.aliyun.com/core/host/list2" target="_blank">阿里云-云虚拟主机</a></p>
-
-<br/>
-<p align="center"><a href="https://cloud.tencent.com/" target="_blank">腾讯云</a></p>
-<p align="center"><a href="https://console.cloud.tencent.com/" target="_blank">腾讯云-控制台</a></p>
-<br/>
-
-<p align="center"><a href="https://www.huaweicloud.com/" target="_blank">华为云</a></p>
-<p align="center"><a href="https://console.huaweicloud.com/console/" target="_blank">华为云-控制台</a></p>
-
-<br/>
-<h3 align="center">开发</h3>
-<p align="center"><a href="https://github.com">Github</a></p>
-<p align="center"><a href="https://stackoverflow.com">Stackoverflow</a></p>
-
-<br/>
-<h3 align="center">友情链接</h3>
-<p align="center"><a href="bupt.html">北邮书签</a></p>
-
-<p>
+<h3 align="center">Jenkins</h3>
+<p align="center"><a href="http://114.116.12.71:8080" target="_blank">Jenkins-1271</a></p>
+<p align="center"><a href="http://114.116.14.31:8080" target="_blank">Jenkins-1431</a></p>
+<p align="center"><a href="http://123.249.34.252:8180/" target="_blank">Jenkins-PI_3BP</a></p>
+<p align="center"><a href="http://123.249.34.252:8380/" target="_blank">Jenkins-PI_3B</a></p>
 
 <p align="center"><a href="../..">回首页</a></p>
 </body>
