--- a/bookmarks/dev/cloud_service.html
+++ b/bookmarks/dev/cloud_service.html
@@ -194,18 +194,23 @@
 <p align="center"><a href="server/portainer.html">Portainer</a></p>
 
 <br/>
-<h3 align="center">NetWork</h3>
-<p align="center"><a href="http://123.249.34.252:8080/" target="_blank">NPS</a></p>
+<h3 align="center">Position</h3>
+<p align="center"><a href="https://114.116.12.71" target="_blank">Position</a></p>
 
 <br/>
-<h3 align="center">Local</h3>
+<h3 align="center">NetWork</h3>
+<p align="center"><a href="http://123.249.34.252:8080/" target="_blank">NPS</a></p>
+<p align="center"><a href="http://123.249.34.252:6443/" target="_blank">ASUS</a></p>
+<p align="center"><a href="http://123.249.34.252:6808/" target="_blank">HUA_WEI_CTCC</a></p>
+<p align="center"><a href="http://123.249.34.252:6809/" target="_blank">HUA_WEI_CUCC</a></p>
+<p align="center"><a href="http://123.249.34.252:6831/" target="_blank">XIAO_MI</a></p>
+
+<br/>
+<h3 align="center">本地服务</h3>
 <p align="center"><a href="https://bytedance.asuscomm.com:8443/" target="_blank">ASUS</a></p>
 <p align="center"><a href="http://bytedance.asuscomm.com:8123/" target="_blank">HA</a></p>
 <p align="center"><a href="http://bytedance.asuscomm.com:8040/" target="_blank">NAS</a></p>
 
-
-<h3 align="center">Position</h3>
-<p align="center"><a href="https://114.116.12.71" target="_blank">Position</a></p>
 
 <br/>
 <h3 align="center">云服务器</h3>
